# wxauto

./: .gitignore  @AutomationLog.txt  LICENSE  README.md  demo.py  doc.md  kobe.py  pyproject.toml  requirements.txt  setup.cfg  wechat.py  wxauto.py  使用文档.md  常见问题.md
Client Application/: Readme.txt
codes/: readme.md
codes/3.7.5版本以前/: wxauto.py
codes/v1/: wxauto.py
codes/v2/: wxauto.py
codes/v3/: wxauto.py
codes/v3.1/: readme.md  wxauto.py
demo/: README.md
demo/1_简单的GPT机器人demo/: .env  README.md  chat.py  chat_try.py  llm.py
demo/2_调用智谱ai的聊天机器人demo/: README.md  wxbot.py
demo/一个设计较为全面的GPT机器人/: LLMClient.py  database.py  main.py  robot.py  robot_manager.py  wechat_tool.py
demo/一个设计较为全面的GPT机器人/data/: database.db  user_database.db
demo/一个设计较为全面的GPT机器人/json/: keywords.json  robots.json
docs/: README.md  example.md
docs/class/: Chat.md  Message.md  Moment.md  Other.md  Session.md  WeChat.md
gpt-chat/: README.md  demo.py
gpt-chat/pretrained/: kobe_1.txt
gpt-chat/role/: kobe.txt
utils/: readme.md
wxauto/: __init__.py  color.py  elements.py  errors.py  exceptions.py  gpt_robot.py  languages.py  logger.py  main.py  param.py  uiautomation.py  utils.py  wx.py  wxauto.py
wxauto/msgs/: __init__.py  attr.py  base.py  friend.py  mattr.py  msg.py  self.py  type.py
wxauto/ui/: __init__.py  base.py  browser.py  chatbox.py  component.py  main.py  moment.py  navigationbox.py  sessionbox.py
wxauto/uia/: __init__.py  uiautomation.py  uiplug.py
wxauto/utils/: __init__.py  lock.py  tools.py  win32.py
