[project]
name = "wxauto"
version = "39.1.1"
description = "wxauto 3.9 V2 version"
authors = [
    {name = "Cluic", email = "tikic@qq.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "tenacity",
    "pywin32",
    "pyperclip",
    "pillow",
    "psutil",
    "colorama",
    "comtypes"
]

[project.scripts]
wxauto = "wxauto.__main__:main"

[tool.poetry]
name = "wxauto"
version = "3.9.2.1"
description = "wxauto V2 version"
authors = ["Cluic"]
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.commands.bdist_wheel]
python-tag = "cp312"