[metadata]
name = wxauto
version = 39.1.18
author = Cluic
author_email = tikic@qq.com
description = wxauto 3.9 V2 version
long_description = file: README.md
long_description_content_type = text/markdown
url = # 可以在这里添加项目网址，如 https://github.com/yourname/wxauto

[options]
packages = find:
python_requires = >=3.8,<=3.15
install_requires =
    tenacity
    pywin32
    pyperclip
    pillow
    psutil
    colorama
    comtypes

[options.packages.find]
include = wxauto*